[package]
name = "rust-fluid"
version = "0.1.0"
authors = ["matsuoka-601 <kokoro601@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.93"
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2" }
glam = "0.29.2"
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] }
js-sys = "0.3.27"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

web-sys = { version = "0.3", features = [
  'OffscreenCanvas',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.docs.rs]
features = ["nightly"]
targets = ["wasm32-unknown-unknown"]
rustc-args = ["-C", "target-feature=+atomics,+bulk-memory"]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"